--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="../src/styles/index.css"
-    />
+    /> -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
